fixed menu bug in tvshow lists on mobile

--- a/src/theme/sass/components/_pages.scss
+++ b/src/theme/sass/components/_pages.scss
@@ -362,7 +362,7 @@ body {
   }
 
   // Landings
-  &.section-tvshows,
+  &.section-tv,
   &.section-movies {
     background: rgba(250,250,250,1);
     #content {
